--- a/app/views/copyrighters/push.html.erb
+++ b/app/views/copyrighters/push.html.erb
@@ -26,23 +26,21 @@
           <tr>
             <th>ID</th>
             <th>Наименование</th>
-            <th>Проект</th>
+            <th>Дата заказа</th>
             <th>Стоимость</th>
-            <th>Кол-во знаков</th>
+            <th>Автор</th>
             <th>Статус</th>
           </tr>
         </thead>
         <tbody>
-          <% @orders.each do |order| %>
           <tr>
-            <td><%= order.id %></td>
-            <td><%= link_to order.name, project_order_url(order.project, order) %></td>
-            <td><%= link_to order.project.name, order.project %></td>
-            <td><%= price_is(order.amount) %> руб.</td>
-            <td><%= order.amount %></td>
-            <td><%= order.complite? %></td>
+            <td>1</td>
+            <td>Column content</td>
+            <td>Column content</td>
+            <td>Column content</td>
+            <td>Column content</td>
+            <td>Column content</td>
           </tr>
-          <% end %>
         </tbody>
       </table>
 
