--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -16,7 +16,7 @@
   <section>
       <div class="container">
         <div class="row">
-          <%= render "/clients/leftmenu" %>
+          <%= render "shared/whatmenu" %>
           <div class="col-md-9">
             <h3>Сообщений: <%= @discussion.amount %> <sup><span class="fa fa-comment-o"></span></sup></h3>
             <ul class="media-list">
@@ -41,8 +41,8 @@
 
 <%= form_for @message, :url => {:action => "newmessage"} do |f| %>
 <%= f.hidden_field :user_id, :value => current_user.id %>
-<%= f.number_field :whom, :value => @discussion.speaker(current_user) %>
-<%= f.number_field :discussion_id, :value => @discussion.id %>
+<%= f.hidden_field :whom, :value => @discussion.speaker(current_user) %>
+<%= f.hidden_field :discussion_id, :value => @discussion.id %>
 <div class="form-group">
   <%= f.text_area :text, :size => "130x8", placeholder: "Текст вашего сообщения пользователю #{@discussion.whom.username}" %>
 </div>
