--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(current_user.discussions.find_by_whom_id(@user),
              html: { method: :delete }) do |f| %>
-  <%= f.submit "Unfollow", class: "btn btn-large" %>
+  <%= f.submit "Убрать из списка контактов", class: "btn btn-large" %>
 <% end %>
