--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
   <div class="container">
     <ol class="breadcrumb">
       <li class="active">Список копирайтеров</li>
+      
     </ol>
   </div>
 </div>
@@ -13,11 +14,13 @@
   <section>
       <div class="container">
         <div class="row">
-<%= render "/clients/leftmenu" %>
+          <%= render "/shared/whatmenu" %>
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-12">
                 <h1>Список копирайтеров</h1>
+
+         <!-- Выбор категории, в которую входит копирайтер
                 <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
                   <div class="caption background-white">
                     <form class="form-horizontal" role="form">
@@ -33,11 +36,10 @@
                       </div>
                       <button type="submit" class="btn btn-primary">Выбрать</button>
                     </form>
-
-
                   </div>
                 </div>
-                <br>
+                <br> -->
+
                 <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
                   <div class="caption background-white">
 
