--- a/app/views/copyrighters/work.html.erb
+++ b/app/views/copyrighters/work.html.erb
@@ -10,47 +10,43 @@
 </div>
 <!-- Breadcrumbs - END -->
 
-  <section>
-      <div class="container">
+<section>
+  <div class="container">
+    <div class="row">
+      <%= render "leftmenu" %>
+      <div class="col-md-9">
         <div class="row">
-<%= render "leftmenu" %>
-          <div class="col-md-9">
-            <div class="row">
-              <div class="col-md-12">
-                <h1>Заказы в работе</h1>
-                <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
-                  <div class="caption background-white">
-
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Наименование</th>
-            <th>Дата заказа</th>
-            <th>Стоимость</th>
-            <th>Автор</th>
-            <th>Статус</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-            <td>Column content</td>
-          </tr>
-        </tbody>
-      </table>
-
-                  </div>
-                </div>
+          <div class="col-md-12">
+            <h1>Заказы в работе</h1>
+            <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
+              <div class="caption background-white">
+                <table class="table table-hover">
+                  <thead>
+                    <tr>
+                      <th>ID</th>
+                      <th>Наименование</th>
+                      <th>Дата заказа</th>
+                      <th>Стоимость</th>
+                      <th>Выполнение</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% @posts.each do |post| %>
+                      <tr>
+                        <td><%= post.id %></td>
+                        <td><%= link_to post.order.name, project_order_path(post.order.project, post.order) %></td>
+                        <td><%= Russian::strftime(post.order.finish_date, "%d %B %Y") %></td>
+                        <td><%= price_is(post.order.amount) %> руб.</td>
+                        <td><%= percentage(post) %></td>
+                      </tr>
+                    <% end %>
+                  </tbody>
+                </table>
               </div>
-
-
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
